src/objects/Practice_Dev_Activity__c.object
<CustomObject>
    <description>Used to track the sales activities of the Practice Development team</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <label>Dental Practice</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipName>Referral_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Activity__c</fullName>
        <label>Sales Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Center Visit</fullName>
                </value>
                <value>
                    <fullName>GP Meeting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>In Office</fullName>
                </value>
                <value>
                    <fullName>Training in CC Practice</fullName>
                </value>
                <value>
                    <fullName>Drop-In</fullName>
                </value>
                <value>
                    <fullName>Telephone Call</fullName>
                </value>
                <value>
                    <fullName>Email/Marketing/Training</fullName>
                </value>
                <value>
                    <fullName>Misc./General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Practice Dev Activity</label>
    <nameField>
        <displayFormat>PD - {00000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Dev Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>